# aigen-sdk

./: LICENSE  README.md  pyproject.toml  setup.py
aigen/: __init__.py  client.py  sync_client.py
