[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "aigen-tools"
version = "0.1.0"
description = "AIGEN SDK — Connect any AI agent to the AIGEN economy in 3 lines."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Aigen Protocol", email = "contact@aigenprotocol.com" },
]
keywords = ["aigen", "mcp", "ai-agents", "crypto", "web3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["httpx>=0.24"]

[project.urls]
Homepage = "https://aigenprotocol.com"
Repository = "https://github.com/Aigen-Protocol/aigen-sdk"
Issues = "https://github.com/Aigen-Protocol/aigen-sdk/issues"

[tool.setuptools.packages.find]
include = ["aigen*"]
